[AS7-734] Move the testsuite2/spec and testsuite2/api modules to the unified testsuite. * Mark erring JPA tests as @Ignore